fix z-index

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,6 @@ body {
   overflow-x: hidden !important;
 }
 
-.intercom-lightweight-app {
-  z-index: 9999;
+html .intercom-lightweight-app {
+  z-index: 997;
 }
